second dey added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+     <header>
         <section class=" section-part">
             <div class=" top-header">
                 <div class="logo">
@@ -25,4 +25,7 @@
         </section>
     </header>
 </body>
+<section class="section-part">
+    <img src="image.jpg" alt="">
+</section>
 </html>
